--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "http-status-codes": "^2.2.0",
+    "joi": "^17.9.2",
     "mongoose": "^7.4.1",
     "morgan": "^1.10.0",
     "validator": "^13.9.0"
