--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 NODE_ENV=development
 PORT=3000
-MONGO_URI=your_mongo_uri
+MONGO_URI=mongodb+srv://user:testpass@cluster0.1v8gxpc.mongodb.net/ecommerce?retryWrites=true&w=majority
+JWT_SECRET=jwt_secret
+JWT_LIFETIME=1d
