--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.3",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/mongodb": "^4.0.7",
     "@types/node": "^20.4.9",
     "@typescript-eslint/parser": "^6.3.0",
     "eslint": "^8.46.0",
